tera/src/snapshot_tests/snapshots/tera__snapshot_tests__rendering__rendering_errors@undefined_slice_start.txt.snap
---
source: tera/src/snapshot_tests/rendering.rs
expression: "&err"
input_file: tera/src/snapshot_tests/rendering_inputs/errors/undefined_slice_start.txt
---
error: Slice start is undefined
 --> undefined_slice_start.txt:1:12
  |
1 | {{ numbers[missing:2] }}
  |            ^^^^^^^
